Provide server-side notifications for changes in LM Reviews #59